codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_opt_in_api_equivalent_token_usage.snap
---
source: tui/src/status/tests.rs
assertion_line: 1669
expression: rendered
---
/status

  >_ OpenAI Codex (v0.160.0)

  Visit https://chatgpt.com/codex/settings/usage for up-to-date
  information on rate limits and credits

  Model:           gpt-5.3-codex (reasoning none, summaries auto)
  Directory:       [[workspace]]
  Permissions:     Custom (workspace with network access, Ask for approval)
  Agents.md:       <none>

  Token usage:     64.8K total  (32.4K input + 32.4K output)
  Context window:  34% left (184K used / 272K)
  Limits:          data not available yet

  Token usage:     184K API-equivalent tokens  ~$0.53
    Input:         152K total, 119K cached, 32.4K billable  ~$0.08
    Output:        32.4K total, 8.7K reasoning  ~$0.45
